# flame

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALLATION.md  LICENSE  QUICKSTART.md  README.md  TECHNICAL.md  pyproject.toml  rename_api.py  requirements.txt  run.py  setup.bat  setup.sh
.github/workflows/: ci.yml  release.yml
src/cli/: repl.py
src/flame/: main.py
src/flame/api/: __init__.py  async_client.py  client.py
src/flame/cli/: __init__.py  executor.py  repl.py
src/flame/tools/: base.py  fs.py  registry.py  system.py
src/flame/utils/: __init__.py  context.py  logger.py  prompts.py
tests/: test_basic.py  test_tools.py
