[project]
name = "flamecli"
version = "0.1.2"
authors = [
  { name="Jameson Piscitello", email="piscitello284@gmail.com" },
]
description = "AI-powered CLI coding assistant with API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openrouter>=0.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
flame = "flame.main:main"

[project.urls]
Homepage = "https://github.com/jameson-pi/flame"
Issues = "https://github.com/jameson-pi/flame/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
